# socket-notify

./: Cargo.toml  README.md  flake.nix  shell.nix
src/: main.rs
