[package]
name = "socket-notify"
version = "0.1.2"
authors = ["Judson <nyarly@gmail.com>"]
description = "Reads (scdaemon) messages from a socket, emits notifications to remind you to touch your yubikey."
license = "MIT"
readme = "README.md"
keywords = ["gpg", "yubikey", "notifications"]
categories = ["command-line-utilities"]
repository = "https://github.com/nyarly/socket-notify"
is-it-maintained-issue-resolution = { repository = "https://github.com/nyarly/socket-notify" }
is-it-maintained-open-issues = { repository = "https://github.com/nyarly/socket-notify" }
maintenance = { status = "passively-maintained" } #what do you want?

[dependencies]
regex = "0.2"
notify-rust = "3"
error-chain = "0.11.0"
